Added maps on personal pages. Without locations yet. And some reformatting text

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,12 +4,12 @@
 	"Contacts": "Contacts",
 	"Robber_of_the_day": "Robber of the day",
 	"Welcome_to": "Welcome to",
-	"Robbers": "Robbers",
 	"Portal": "portal",
 	"Catchphrase_1": "We are begging you",
 	"Catchphrase_2": "not to steal anything",
 	"Developers": "Developers",
 	"Jesse James": "Jesse James",
 	"Search": "Search...",
-	"Video": "Video"
+	"Video": "Video",
+	"Map": "Map"
 }
