--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -4,11 +4,11 @@
 	"Contacts": "Контакты",
 	"Robber_of_the_day": "Грабитель дня",
 	"Welcome_to": "Самые знаменитые",
-	"Robbers": "Грабители",
 	"Portal": "мира",
 	"Catchphrase_1": "Умоляем вас",
 	"Catchphrase_2": "ничего не красть",
 	"Developers": "Разработчики",
 	"Search": "Искать...",
-	"Video": "Видео"
+	"Video": "Видео",
+	"Map": "Карта"
 }
