--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -11,5 +11,6 @@
 	"Jesse James": "Jesse James",
 	"Search": "Search...",
 	"Video": "Video",
-	"Map": "Map"
+	"Map": "Map",
+	"Gallery": "Gallery"
 }
