--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -10,5 +10,6 @@
 	"Developers": "Разработчики",
 	"Search": "Искать...",
 	"Video": "Видео",
-	"Map": "Карта"
+	"Map": "Карта",
+	"Gallery": "Галлерея"
 }
