fix menu and other stuff

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,14 +1,16 @@
 {
 	"Robbers": "Robbers",
 	"Home": "Home",
-	"Contacts": "Contacts",
+	"About": "About",
+	"Links": "Links",
 	"Robber_of_the_day": "Robber of the day",
 	"Welcome_to": "Welcome to",
 	"Portal": "portal",
 	"Catchphrase_1": "We are begging you",
 	"Catchphrase_2": "not to steal anything",
+	"Catchphrase_3": "Other data was stolen by robbers... ",
+	"Catchphrase_4": " An investigation is underway",
 	"Developers": "Developers",
-	"Jesse James": "Jesse James",
 	"Search": "Search...",
 	"Video": "Video",
 	"Map": "Map",
