--- a/src/locales/ru/translation.json
+++ b/src/locales/ru/translation.json
@@ -1,12 +1,15 @@
 {
 	"Robbers": "Грабители",
 	"Home": "Главная",
-	"Contacts": "Контакты",
+	"About": "О портале",
+	"Links": "Ссылки",
 	"Robber_of_the_day": "Грабитель дня",
 	"Welcome_to": "Самые знаменитые",
 	"Portal": "мира",
 	"Catchphrase_1": "Умоляем вас",
 	"Catchphrase_2": "ничего не красть",
+	"Catchphrase_3": "Остальная информация была украдена... ",
+	"Catchphrase_4": "Ведётся расследование",
 	"Developers": "Разработчики",
 	"Search": "Искать...",
 	"Video": "Видео",
